# robot

./: .gitignore  CMakeLists.txt  README.md  start.c  test.c
ears/: ear_ops.c  ear_params.c  robot_ears.h
examples/: colllect_audio_min.c  open_audio_min.c  open_audio_with_buffer.c  pcm.c  pcm_min.c  rawmidi.c  timer.c
head/: brain.c  robot_header.h
speaker/: robot_speaker.h  speaker_ops.c  speaker_params.c
util/: playsound.c  robot_util.h
